# amla_group23_at1

./: Makefile  README.md  pyproject.toml  requirements.txt
models/: 14635775-experiment2-xgb.joblib  25656075-experiment1-RF.joblib  25672914-experiment-3-XGBoost.pkl  36120-25SP-group23-25934391-AT1-experiment-4-clf.joblib
notebooks/: 36120-25SP-AT1-group23-25656075-experiment2.ipynb  36120-25SP-AT1-group_23-25672914-experiment_0.ipynb  36120-25SP-group23-14635775-AT1-experiment-1.ipynb  36120-25SP-group23-14635775-AT1-experiment-2.ipynb  36120-25SP-group23-14635775-AT1-experiment-3.ipynb  36120-25SP-group23-14635775-AT1-experiment-4.ipynb  36120-25SP-group23-25656075-AT1-experiment0.ipynb  36120-25SP-group23-25656075-AT1-experiment1.ipynb  36120-25SP-group23-25656075-AT1-experiment3.ipynb  36120-25SP-group23-25672914-AT1-experiment-0.ipynb  36120-25SP-group23-25672914-AT1-experiment-1.ipynb  36120-25SP-group23-25672914-AT1-experiment-2.ipynb  36120-25SP-group23-25672914-AT1-experiment-3.ipynb  36120-25SP-group23-25934391-AT1-experiment-1.ipynb  36120-25SP-group23-25934391-AT1-experiment-2.ipynb  36120-25SP-group23-25934391-AT1-experiment-3.ipynb  36120-25SP-group23-25934391-AT1-experiment-4.ipynb  36120_25SP_AT1_group_23_25672914_experiment1.ipynb  36120_25SP_AT1_group_23_25672914_experiment_1.ipynb  36120_25SP_AT1_group_23_25672914_experiment_2.ipynb  36120_25SP_AT1_group_23_25672914_experiment_3.ipynb
