[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "amla_group23_at1"
version = "0.0.1"
description = "Repository for assignment 1 of Adv. Machine Learning."
authors = [
  { name = "Group 23" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "pandas (==2.2.2)",
    "jupyterlab (==4.2.3)",
    "scikit-learn (==1.5.1)",
    "joblib (==1.4.2)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["amla_group23_at1"]
include = ["pyproject.toml", "amla_group23_at1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["amla_group23_at1"]
force-sort-within-sections = true

